# autocomplete-tools

./: .eslintignore  .eslintrc.js  .gitignore  .prettierrc.js  .yarnrc.yml  CONTRIBUTING.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build-test.yml  lint.yml  test.yml  update-autocomplete-tools-spec.yaml  update-create-completion-spec-spec.yaml  update-docs.yaml  update-publish-spec-to-team-spec.yaml
.husky/: pre-commit
cli/create-completion-spec/: .gitignore  generate-spec.ts  package.json  tsconfig.json
cli/publish-spec/: package.json  test.sh  tsconfig.json
cli/publish-spec-to-team/: .gitignore  generate-spec.ts  package.json  test.sh
cli/tools-cli/: .gitignore  README.md  generate-spec.ts  package.json  tsconfig.json
eslint/config-autocomplete/: README.md  package.json
eslint/plugin-fig-linter/: README.md  index.js  package.json
generators/: README.md  index.ts  package.json  tsconfig.json
generators/src/: ai.ts  filepaths.ts  keyvalue.ts  resolve.ts
generators/test/: filepaths.test.ts  keyvalue.test.ts  tsconfig.json
helpers/: README.md  package.json  tsconfig.json
helpers/src/: index.ts  versions.ts
helpers/test/: index.ts  versions.test.ts
hooks/: LICENSE  README.md  index.ts  package.json  tsconfig.json
hooks/src/: index.ts  useExecuteCommand.ts
integrations/: cobra
integrations/argparse/: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
integrations/argparse/argparse_complete_fig/: __init__.py  fig.py
integrations/argparse/tests/: test_fig.py
integrations/cement/: README.md  pyproject.toml
integrations/cement/cement_complete_fig/: __init__.py  fig.py
integrations/cement/cement_complete_fig/ext/: ext_complete_fig.py
integrations/clap/: README.md
integrations/click/: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  setup.cfg
integrations/click/click_complete_fig/: fig.py
integrations/click/tests/: test_fig.py
integrations/cobra/: main.go
integrations/commander/: .gitignore  MIGRATION.md  package.json
integrations/oclif/: MIGRATION.md  README.md  package.json  tsconfig.json
merge/: .gitignore  README.md  package.json  tsconfig.json
merge/src/: merge.ts  presets.ts
merge/test/: index.ts  tsconfig.json
shared/: README.md  index.ts  package.json
shared/src/: convert.ts  internal.ts  mixins.ts  revert.ts  (+1 more)
src/: App.tsx
types/: README.md  cspell.json  docs.json  index.d.ts  package.json  tsconfig.json
(+214 files in other folders)
