[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cement_complete_fig"
version = "1.0.0"
authors = [{ name = "Fig Team", email =  "hello@fig.io" }]
maintainers = [{ name = "Sean Sullivan", email =  "sean@fig.io" }]
description = "Autogenerate completions for CLI tools built with cement"
readme = "README.md"
requires-python = ">=3.5"
license = { text = "MIT" }
keywords = ["cement", "fig", "cli", "completions", "terminal", "framework"]
dependencies = [
    "argparse_complete_fig",
    "cement"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Bug Tracker" = "https://github.com/withfig/autocomplete-tools/issues"
Homepage = "https://github.com/withfig/autocomplete-tools"
