[metadata]
name = click_complete_fig
version = 1.0.0
author = Fig
author_email = hello@fig.io
description =  Autogenerate Completions for CLI tools built with click
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = click, cli, completions, framework, terminal, fig
url = https://github.com/withfig/autocomplete-tools
project_urls =
    Bug Tracker = https://github.com/withfig/autocomplete-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = click_complete_fig
python_requires = >=3.6

install_requires=
    click